Implement the blog index in Haskell.

--- a/struct/templates/prototypes/refli/blog-index.pug
+++ b/struct/templates/prototypes/refli/blog-index.pug
@@ -4,7 +4,7 @@ block canonical
     link(rel="canonical", href="https://refli.be/en/blog")
 
 block title
-    title Découvrons Refli
+    title Blog
 
 block content
     .c-content.flow-all.limit-42em
