--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -79,6 +79,8 @@ html(dir="ltr", lang="en")
                 h3 Refli
                 ul
                     li
+                        a(href="/prototypes/refli/index-root.html") Homepage (selector)
+                    li
                         a(href="/prototypes/refli/index.html") Homepage
                     li
                         a(href="/prototypes/refli/index-constant.html") Homepage (constant)
