Add a link to the blog in the footer nav block.

--- a/struct/templates/layouts/refli/page.pug
+++ b/struct/templates/layouts/refli/page.pug
@@ -35,13 +35,15 @@ html(dir="ltr", lang="en")
                             li
                                 a(href="/about.html") About
                             li
-                                a(href="/changelog.html") Changelog
+                                a(href="/prototypes/refli/blog-index.html") Blog
+                            li
+                                a(href="/documentation.html") Documentation
                             li
                                 a(href="/contact.html") Contact
                             li
                                 a(href="/disclaimer.html") Disclaimer
                             li
-                                a(href="/documentation.html") Documentation
+                                a(href="/changelog.html") Changelog
                             li
                                 a(href="/prototypes/refli/motherboard-index.html") Lex Iterata
                         hr
