--- a/struct/scss/struct/tachyons.scss
+++ b/struct/scss/struct/tachyons.scss
@@ -47,7 +47,8 @@ h1 { font-size: 2em; margin: .67em 0; }
  * 1. Add the correct box sizing in Firefox.
  * 2. Show the overflow in Edge and IE.
  */
-hr { box-sizing: content-box; /* 1 */ height: 0; /* 1 */ overflow: visible; /* 2 */ }
+// STRUCT: commented out.
+//hr { box-sizing: content-box; /* 1 */ height: 0; /* 1 */ overflow: visible; /* 2 */ }
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
  * 2. Correct the odd `em` font sizing in all browsers.
