--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -91,6 +91,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/message-signup-success.html") Sign up success
                     li
+                        a(href="/prototypes/refli/message-subscribe-success.html") Subscribe success
+                    li
                         a(href="/prototypes/refli/reset.html") Reset password
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
