Add a standalone subscribe form.
This is the form found on the landing page.

--- a/struct/templates/prototypes/refli/index-constant.pug
+++ b/struct/templates/prototypes/refli/index-constant.pug
@@ -13,16 +13,7 @@ block content
 
             p We believe that even the most complex concepts can be made understandable, and we're committed to breaking down barriers in payroll calculation.
 
-            .box.u-flow-c-4
-                form.c-text.flow
-                    h4 Follow new features and updates on Refli
-                    div
-                        label Your email address
-                        input.c-input
-                    button.c-button.c-button--primary(type="submit")
-                        span Keep me updated
-                        +arrow-right
-                    p We respect your privacy. You can unsubscribe at any time.
+            include ../../partials/refli/en/form-subscribe
 
         div
             // empty
