--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -89,6 +89,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/signup.html") Sign up
                     li
+                        a(href="/prototypes/refli/subscribe.html") Subscribe
+                    li
                         a(href="/prototypes/refli/form-foo.html") Foo
                     li
                         a(href="/prototypes/refli/message-foo-success.html") Foo success
