--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -56,6 +56,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/flexbox.html") Flexbox
                     li
+                        a(href="/specimens/key-values.html") Key values
+                    li
                         a(href="/specimens/button.html") Button
                     li
                         a(href="/specimens/buttons.html") Buttons
