Start confirmation screens.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -530,3 +530,27 @@ i.mb-i {font-style: italic;}
 // Specific rules for blog posts.
 .blog-post-details {border: 2px solid #e4e4e4; padding: 1em;}
 .blog-post-centered-svg svg {display: block; margin: auto;}
+
+// Key-values, when using tables.
+table.pairs {
+  table-layout: fixed;
+  width: 100%;
+}
+table.pairs tr td:first-child {
+  font-weight: 500;
+  width: calc(33.3333%);
+  padding: 0.5em 0.5em 0.5em 0;
+}
+table.pairs tr td:last-child {
+  width: calc(66.6667%);
+}
+table.pairs tr {
+  /* Take some space, even without .pairs--border-bottom. */
+  border-bottom: 1px solid #fff;
+}
+table.pairs.pairs--border-bottom tr {
+  border-bottom: 1px solid #ddd;
+}
+table.pairs tr:hover {
+  background-color: #efefef;
+}
