--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -95,6 +95,10 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/form-foo.html") Foo
                     li
+                        a(href="/prototypes/refli/confirm-foo-valid.html") Confirm Foo
+                    li
+                        a(href="/prototypes/refli/confirm-foo-errors.html") Confirm Foo (errors)
+                    li
                         a(href="/prototypes/refli/message-foo-success.html") Foo success
                     li
                         a(href="/prototypes/refli/message-signup-success.html") Sign up success
