--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -66,6 +66,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/cover.html") Cover
                     li
+                        a(href="/specimens/sidemenu.html") Side menu
+                    li
                         a(href="/specimens/form.html") Form
                     li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
