--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -109,6 +109,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/reset.html") Reset password
                     li
+                        a(href="/prototypes/refli/select-password.html") Select password
+                    li
                         a(href="/prototypes/refli/describe.html") Salary computation form
                     li
                         a(href="/prototypes/refli/blog-index.html") Blog index
