Add a HTTP 500 error page.

--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -199,6 +199,9 @@ hr {
   flex-direction: column;
   min-height: 100vh;
 }
+.cover > main {
+  margin-block: auto;
+}
 .cover > footer {
   margin-top: auto;
 }
