--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -66,6 +66,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/cover.html") Cover
                     li
+                        a(href="/specimens/cover-content.html") Cover + content
+                    li
                         a(href="/specimens/sidemenu.html") Side menu
                     li
                         a(href="/specimens/form.html") Form
@@ -125,6 +127,8 @@ html(dir="ltr", lang="en")
                         | )
                     li
                         a(href="/partials/refli/en/blog/introducing-refli.html") Blog post partial
+                    li
+                        a(href="/prototypes/refli/http-500.html") HTTP 500
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
