--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -128,6 +128,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/partials/refli/en/blog/introducing-refli.html") Blog post partial
                     li
+                        a(href="/prototypes/refli/http-404.html") HTTP 404
+                    li
                         a(href="/prototypes/refli/http-500.html") HTTP 500
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
