--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -131,6 +131,8 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/http-404.html") HTTP 404
                     li
                         a(href="/prototypes/refli/http-500.html") HTTP 500
+                    li
+                        a(href="/prototypes/refli/http-502.html") HTTP 502
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
