--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -133,6 +133,8 @@ html(dir="ltr", lang="en")
                         a(href="/prototypes/refli/http-500.html") HTTP 500
                     li
                         a(href="/prototypes/refli/http-502.html") HTTP 502
+                    li
+                        a(href="/prototypes/refli/http-504.html") HTTP 504
                 h3 Lex Iterata
                 p An attempt at an alternative rendition of the <a href="https://www.ejustice.just.fgov.be/">official Belgian journal</a>.
                 ul
