--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -130,6 +130,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/http-400.html") HTTP 400
                     li
+                        a(href="/prototypes/refli/http-401.html") HTTP 401
+                    li
                         a(href="/prototypes/refli/http-404.html") HTTP 404
                     li
                         a(href="/prototypes/refli/http-500.html") HTTP 500
