Add a prototype page for the gross-to-net results.

--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -115,6 +115,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/describe.html") Salary computation form
                     li
+                        a(href="/prototypes/refli/describe-result.html") Salary computation result
+                    li
                         a(href="/prototypes/refli/blog-index.html") Blog index
                     li
                         a(href="/prototypes/refli/blog-post-introducing-refli.html") Blog post
@@ -127,6 +129,13 @@ html(dir="ltr", lang="en")
                         | )
                     li
                         a(href="/partials/refli/en/blog/introducing-refli.html") Blog post partial
+                        |
+                        | (
+                        a(href="/partials/refli/fr/blog/introducing-refli.html") Fr
+                        | ,
+                        |
+                        a(href="/partials/refli/nl/blog/introducing-refli.html") Nl
+                        | )
                     li
                         a(href="/prototypes/refli/http-400.html") HTTP 400
                     li
