--- a/struct/templates/prototypes/refli/describe-result.pug
+++ b/struct/templates/prototypes/refli/describe-result.pug
@@ -6,7 +6,7 @@ block content
         small.breadcrumb 3600.00 EUR → 2399.65 EUR
     .switcher
         .flow-all
-            p This page presents a net monthly salary calculation based on a gross salary of 3600.00 EUR for a single employee with no disabilities, no children and no dependents. The information on this page is for general guidance only.
+            p This page presents a net monthly salary calculation based on a <strong>gross</strong> salary of <strong>3600.00 EUR</strong> for a <strong>single employee</strong> with no disabilities, no children and no dependents. <i>The information on this page is for general guidance only.</i>
 
         div
             // empty
