Start pseudo A4 document.

--- a/struct/scss/struct/layouts.scss
+++ b/struct/scss/struct/layouts.scss
@@ -36,6 +36,10 @@
   border: 2px solid black;
 }
 
+.box--light {
+  border: 2px solid #DDD;
+}
+
 // Bar. Separate items organized horizontally.
 
 .u-bar {
