--- a/struct/templates/layouts/refli/page.pug
+++ b/struct/templates/layouts/refli/page.pug
@@ -5,6 +5,7 @@ html(dir="ltr", lang="en")
         meta(charset="utf-8")
         meta(name="viewport" content="width=device-width, initial-scale=1")
         link(rel="stylesheet", href="/static/css/struct.css")
+        link(rel="stylesheet", href="/static/css/struct/lorem.css")
         block canonical
             //-
               By default, noindex. You should use a link rel="canonical"
