--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -117,6 +117,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/prototypes/refli/describe-result.html") Salary computation result
                     li
+                        a(href="/prototypes/refli/document.html") Document
+                    li
                         a(href="/prototypes/refli/blog-index.html") Blog index
                     li
                         a(href="/prototypes/refli/blog-post-introducing-refli.html") Blog post
