--- a/struct/templates/notes/foundations.pug
+++ b/struct/templates/notes/foundations.pug
@@ -14,7 +14,7 @@ html(dir="ltr", lang="en")
             .c-content.flow-all.paragraph-70ch
                 h1 Foundations
 
-                p Creating a design system can be a daunting task, especially if like me, you're not a designer or a frontend developer. Here I try to explain a possible approach (for the <i>implementation</i> part). I have a software development background and I like to write code in small pieces.
+                p Creating a design system can be a daunting task, especially if like me, you're not a designer or a front-end developer. Here I try to explain a possible approach (for the <i>implementation</i> part). I have a software development background and I like to write code in small pieces.
 
                 p I think the best approach is to first use a design software such as Figma then to implement the result using HTML and CSS. (I also recommand to defer adding JavaScript or similar as late as possible). In this page, we see how we can start playing around with HTML and CSS, and we see some CSS rules that will serve as a foundation to build upon: outlines (for debugging and exploring), media queries (using a `div` width as example, and reset (we include in that section box-sizing and redefining what a rem is).
 
