--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -14,6 +14,8 @@ html(dir="ltr", lang="en")
                 p These are implementation notes. The long-term goal is to explain how to create the (struct based) design from scratch, with no previous knowledge of CSS or HTML.
                 ul
                     li
+                        a(href="/notes/preface.html") Preface
+                    li
                         a(href="/notes/foundations.html") Foundations
                     li
                         a(href="/notes/technicalities.html") Technicalities
