--- a/emails/example.mjml
+++ b/emails/example.mjml
@@ -10,10 +10,10 @@
         <mj-text font-family="IBM Plex Sans, Arial" font-size="25.6288px" font-weight="600">
           Nisl vitae vitae in at
         </mj-text>
-        <mj-text font-family="IBM Plex Sans, Arial" font-size="16px" line-height="1.5em">
+        <mj-text font-family="IBM Plex Sans, Arial" font-size="16px" line-height="1.5">
           Nunc consequat sodales purus aenean mattis at et risus nec. Lorem pretium sagittis odio faucibus imperdiet. Nisi, commodo proin accumsan, quis placerat. Vitae sed. Porta leo phasellus tristique augue odio et fringilla. Feugiat cursus id euismod eu aliquet quam. Nam tempor iaculis urna amet et commodo, arcu porta lectus. Sodales a netus dolor sociis nunc
         </mj-text>
-        <mj-text font-family="IBM Plex Sans, Arial" font-size="16px" line-height="1.5em">
+        <mj-text font-family="IBM Plex Sans, Arial" font-size="16px" line-height="1.5">
           Odio eget condimentum cras non. Nisl vitae vitae in at ultrices nibh imperdiet risus. Ac tristique nibh praesent id auctor neque, ut sit. Dignissim facilisis ut pharetra, vel nibh habitant suspendisse. Vel id viverra ornare sagittis morbi pretium laoreet sit. Dignissim odio condimentum arcu risus scelerisque scelerisque in.
         </mj-text>
       </mj-column>
