--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -80,6 +80,10 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/logo.html") Logo
                     li
+                        a(href="/specimens/image.html") Image
+                    li
+                        a(href="/specimens/image-limit.html") Image (limit)
+                    li
                         a(href="/specimens/pikchr.html") Pikchr
 
                 h2 Prototypes
