--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -76,6 +76,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/form.html") Form
                     li
+                        a(href="/specimens/invoke.html") Invoke
+                    li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                     li
                         a(href="/specimens/tachyons.html") Tachyons
