--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -76,7 +76,11 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/form.html") Form
                     li
-                        a(href="/specimens/invoke.html") Invoke
+                        a(href="/specimens/invoke.html") Invoke (JavaScript)
+                    li
+                        a(href="/specimens/invoke--form.html") Invoke (form)
+                    li
+                        a(href="/specimens/invoke--htmx.html") Invoke (htmx)
                     li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                     li
