--- a/struct/scss/struct/misc.scss
+++ b/struct/scss/struct/misc.scss
@@ -637,3 +637,16 @@ table.table {
   --flow-space: 0.6em;
   margin-top: var(--flow-space);
 }
+
+// Try to make a simple text input look like a paragraph.
+input.no-style {
+  border: none;
+  outline: none;
+  background: none;
+  width: 100%;
+  font-family: inherit;
+  font-size: inherit;
+  color: inherit;
+  line-height: inherit;
+  padding: 0;
+}
