--- a/struct/templates/specimens/invoke--htmx.pug
+++ b/struct/templates/specimens/invoke--htmx.pug
@@ -12,7 +12,7 @@ html(dir="ltr", lang="fr")
                 h1 The Invoke (htmx)
                 p The Invoke is a two-column layout where the left part is some kind of input (e.g. a text editor, some UI widgets, a form, ...) and the right part shows some result.
         .u-container
-            .switcher
+            .switcher#invoke
                 form(action="/specimens/invoke-result.html" method="GET" hx-get="/specimens/invoke-result.html" hx-swap="outerHTML" hx-target="#output-text" hx-select="#output-text").c-content.flow
                     input#input-text.no-style(type="text" name="input-text" value="Edit this line.")
                     div
@@ -20,7 +20,7 @@ html(dir="ltr", lang="fr")
                             span Process
                             +arrow-right
                     div
-                        button.c-button.c-button--secondary
+                        button.c-button.c-button--secondary(formaction="/specimens/invoke--htmx.html" formmethod="GET" hx-get="/specimens/invoke--htmx.html" hx-swap="outerHTML" hx-target="#invoke" hx-select="#invoke")
                             span Reset
                 .flow
                     p#output-text
