--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -82,6 +82,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/invoke--htmx.html") Invoke (htmx)
                     li
+                        a(href="/specimens/invoke--glsl.html") Invoke (glsl)
+                    li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                     li
                         a(href="/specimens/tachyons.html") Tachyons
