--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -76,6 +76,8 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/form.html") Form
                     li
+                        a(href="/specimens/fill-int.html") Fill Int
+                    li
                         a(href="/specimens/invoke.html") Invoke (JavaScript)
                     li
                         a(href="/specimens/invoke--form.html") Invoke (form)
