Add result variant without the initial form.

--- a/struct/templates/specimens/invoke-result.pug
+++ b/struct/templates/specimens/invoke-result.pug
@@ -9,7 +9,7 @@ html(dir="ltr", lang="fr")
     body
         .u-container
             .c-text.flow-all
-                h1 The Invoke (Result)
+                h1 The Invoke (with result)
                 p The Invoke is a two-column layout where the left part is some kind of input (e.g. a text editor, some UI widgets, a form, ...) and the right part shows some result.
         .u-container
             .switcher
