--- a/struct/templates/struct.pug
+++ b/struct/templates/struct.pug
@@ -78,13 +78,17 @@ html(dir="ltr", lang="en")
                     li
                         a(href="/specimens/fill-int.html") Fill Int
                     li
-                        a(href="/specimens/invoke.html") Invoke (JavaScript)
-                    li
                         a(href="/specimens/invoke--form.html") Invoke (form)
+                    li
+                        a(href="/specimens/invoke-result.html") Invoke (with result)
+                    li
+                        a(href="/specimens/invoke--result-only.html") Invoke (result only)
+                    li
+                        a(href="/specimens/invoke.html") Invoke (JavaScript)
                     li
                         a(href="/specimens/invoke--htmx.html") Invoke (htmx)
                     li
-                        a(href="/specimens/invoke--glsl.html") Invoke (glsl)
+                        a(href="/specimens/invoke--glsl.html") Invoke (GLSL)
                     li
                         a(href="/specimens/dropdown.html") Pure CSS dropdown
                     li
